# aws-agentcore-a2a-proxy

./: .env.example  .envbackup  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  cleanup-infrastructure.sh  pyproject.toml  release-please-config.json
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: ci.yml  cicd.yaml
aws-bedrock-a2a-proxy/: pyproject.toml  test_direct.py  test_list_agents.py
aws-bedrock-a2a-proxy/artifacts/coverage/: coverage.lcov
aws-bedrock-a2a-proxy/src/aws_bedrock_a2a_proxy/: __init__.py  __main__.py  a2a_proxy.py  a2a_proxy_server.py  agentcore_client.py  agentcore_executor.py  agentcore_http_client.py  agentcore_streaming_invocation_client.py  aws_a2a_translation.py  main.py
aws-bedrock-a2a-proxy/tests/: test_a2a_proxy.py  test_agentcore_executor.py  test_agentcore_http_client.py  test_main.py
demo/: .env.example  Dockerfile  README.md
demo/agents/aws-operator-agent/: .bedrock_agentcore.yaml  Dockerfile  Makefile  README.md  agent.py  aws_command_tool.py  config.json  pyproject.toml  requirements.txt  status_tool.py
demo/agents/aws-operator-agent/infrastructure/: iam.tf  outputs.tf  (+1 more)
demo/agents/customer-support-agents/: Dockerfile  Makefile  aws_agentcore_client.py  deploy-via-api.py  undeploy-via-api.py
demo/agents/github-dev-assistant/: Dockerfile  Makefile  README.md  agent.py  config.json  pyproject.toml  requirements.txt
demo/agents/github-dev-assistant/infrastructure/: iam.tf  main.tf  outputs.tf  variables.tf
demo/customer-support/: Makefile  README.md  agent.py  aws_agentcore_client.py  deploy-via-api.py  setup-infrastructure.sh
demo/infrastructure/: .gitignore  bedrock.tf  cloudwatch.tf  ecr.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
demo/scripts/: deploy-agent  manage-agent.py  undeploy-agent
scripts/: check-env.sh
src/aws_bedrock_a2a_proxy/: __main__.py  a2a_proxy.py
tests/: test_main.py
