[project]
name = "github-dev-assistant"
version = "0.2.0"
description = "GitHub Development Assistant Agent"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore",
    "httpx>=0.27.0",
    "fastmcp>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]